# tcc

./: makefile
backend/: .gitignore  Cargo.toml  docker-compose.yml  vercel.json
backend/migrations/: V1__user_table.sql  V2__user_choices.sql
backend/src/: lib.rs  main.rs
backend/src/controller/: errors.rs  mod.rs  routes.rs
backend/src/controller/handlers/: mod.rs  register_user_choice.rs  tmdb_movie_discover.rs  tmdb_movie_discover_by_id.rs  user_login.rs  user_register_handler.rs
backend/src/controller/middlewares/: auth.rs
backend/src/jwt/service/: errors.rs  mod.rs
backend/src/storage/: mod.rs
backend/src/storage/entities/: mod.rs  user.rs  user_choice.rs
backend/src/storage/postgres/: config.rs  mod.rs
backend/src/storage/repositories/users/: mod.rs  queries.rs  users_repository.rs
backend/src/tmdb/dtos/: discover_movie_by_id_response_dto.rs  discover_movie_dto.rs  discover_movie_response_dto.rs  mod.rs  recommendation_type.rs
backend/src/tmdb/service/: errors.rs  mod.rs
backend/src/user/dtos/: create_user_dto.rs  create_user_response_dto.rs  mod.rs  register_user_choice_dto.rs  user_login_dto.rs  user_login_response_dto.rs
backend/src/user/service/: errors.rs  mod.rs
backend/src/utils/: email.rs  env.rs
backend/tests/: register_user_choice.rs  user_creation.rs  user_login.rs  validate_user.rs
backend/tests/common/: mod.rs
frontend/: package-lock.json  package.json
frontend/app/: api.ts  layout.tsx  page.tsx
frontend/app/movies/: listItems.tsx  page.tsx
frontend/app/signIn/: page.tsx
frontend/app/signUp/: page.tsx
(+1 files in other folders)
