[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.6" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
tokio-postgres = { version = "0.7" }
refinery = { version = "0.8", features = ["tokio-postgres"] }
dotenv = { version = "0.15" }