[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6", features = ["macros"]}
tracing = "0.1"
tracing-subscriber = "0.2"
tokio-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1",
] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
dotenv = "0.15"
deadpool-postgres = "0.10"
deadpool = "0.10"
async-trait = "0.1"
uuid = {version = "1.0", features = ["serde", "v4"]}
chrono = {version = "0.4", features = ["serde"]}
thiserror = "1.0"
regex = "1.9"
bcrypt = "0.15"